Update after html validation

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -260,6 +260,6 @@
         <p class="paragraph__footer">&copy; Easybank. All Rights Reserved</p>
       </div>
     </footer>
-    <script src=""></script>
+    <script src="/dist/bundle.js"></script>
   </body>
 </html>
