Working on rendering images with webpack

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -19,7 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/src/styles.css" />
+    <link rel="stylesheet" href="/dist/styles.css" />
   </head>
   <body>
     <!-- Hero -->
@@ -28,20 +28,20 @@
         <nav class="nav">
           <img
             class="easybank-icon"
-            src="/src/images/logo.svg"
+            src="/dist/images/logo.svg"
             alt="Easybank Logo"
           />
           <button id="openModalImage" class="btn btn__modal--open">
             <img
               class="modal-icon--open"
-              src="/src/images/icon-hamburger.svg"
+              src="/dist/images/icon-hamburger.svg"
               alt="Navigation Toggler"
             />
           </button>
           <button id="closeModalImage" class="btn btn__modal--close">
             <img
               class="modal-icon--close"
-              src="/src/images/icon-close.svg"
+              src="/dist/images/icon-close.svg"
               alt="Close Navigation Menu"
             />
           </button>
@@ -65,7 +65,7 @@
         <div class="hero__image">
           <img
             class="image-mockup"
-            src="/src/images/image-mockups.png"
+            src="/dist/images/image-mockups.png"
             alt=""
           />
           <div class="hero__content">
@@ -94,7 +94,7 @@
       <div class="grid grid--1x2 grid--1x4">
         <article class="card__feature">
           <span class="icon-container">
-            <img src="/src/images/icon-online.svg" alt="" />
+            <img src="/dist/images/icon-online.svg" alt="" />
           </span>
           <h3>Online Banking</h3>
           <p class="paragraph__feature">
@@ -104,7 +104,7 @@
         </article>
         <article class="card__feature">
           <span class="icon-container">
-            <img src="/src/images/icon-budgeting.svg" alt="" />
+            <img src="/dist/images/icon-budgeting.svg" alt="" />
           </span>
           <h3>Simple Budgeting</h3>
           <p class="paragraph__feature">
@@ -114,7 +114,7 @@
         </article>
         <article class="card__feature">
           <span class="icon-container">
-            <img src="/src/images/icon-onboarding.svg" alt="" />
+            <img src="/dist/images/icon-onboarding.svg" alt="" />
           </span>
           <h3>Fast Onboarding</h3>
           <p class="paragraph__feature">
@@ -124,7 +124,7 @@
         </article>
         <article class="card__feature">
           <span class="icon-container">
-            <img src="/src/images/icon-api.svg" alt="" />
+            <img src="/dist/images/icon-api.svg" alt="" />
           </span>
           <h3>Open API</h3>
           <p class="paragraph__feature">
@@ -144,12 +144,12 @@
           <picture>
             <source
               type="image/webp"
-              srcset="/src/images/image-currency.webp"
+              srcset="/dist/images/image-currency.webp"
             />
-            <source type="image/jpg" srcset="/src/images/image-currency.jpg" />
+            <source type="image/jpg" srcset="/dist/images/image-currency.jpg" />
             <img
               class="images__article"
-              src="/src/images/image-currency.jpg"
+              src="/dist/images/image-currency.jpg"
               alt="A pile of currency from various countries."
             />
           </picture>
@@ -166,15 +166,15 @@
           <picture>
             <source
               type="image/webp"
-              srcset="/src/images/image-restaurant.webp"
+              srcset="/dist/images/image-restaurant.webp"
             />
             <source
               type="image/jpg"
-              srcset="/src/images/image-restaurant.jpg"
+              srcset="/dist/images/image-restaurant.jpg"
             />
             <img
               class="images__article"
-              src="/src/images/image-currency.jpg"
+              src="/dist/images/image-currency.jpg"
               alt="A pile of currency from various countries."
             />
           </picture>
@@ -189,11 +189,11 @@
         </article>
         <article class="card__article">
           <picture>
-            <source type="image/webp" srcset="/src/images/image-plane.webp" />
-            <source type="image/jpg" srcset="/src/images/image-plane.jpg" />
+            <source type="image/webp" srcset="/dist/images/image-plane.webp" />
+            <source type="image/jpg" srcset="/dist/images/image-plane.jpg" />
             <img
               class="images__article"
-              src="/src/images/image-plane.jpg"
+              src="/dist/images/image-plane.jpg"
               alt="A pile of currency from various countries."
             />
           </picture>
@@ -210,12 +210,12 @@
           <picture>
             <source
               type="image/webp"
-              srcset="/src/images/image-confetti.webp"
+              srcset="/dist/images/image-confetti.webp"
             />
-            <source type="image/jpg" srcset="/src/images/image-confetti.jpg" />
+            <source type="image/jpg" srcset="/dist/images/image-confetti.jpg" />
             <img
               class="images__article"
-              src="/src/images/image-confetti.jpg"
+              src="/dist/images/image-confetti.jpg"
               alt="A pile of currency from various countries."
             />
           </picture>
@@ -235,11 +235,11 @@
     <footer class="footer">
       <div class="grid flex__footer">
         <div class="footer__logo">
-          <img src="/src/images/logo-white.svg" alt="Easybank Logo" />
+          <img src="/dist/images/logo-white.svg" alt="Easybank Logo" />
         </div>
         <div class="footer__icons">
           <a href="#"
-            ><img src="/src/images/social-media-icons.svg" alt=""
+            ><img src="/dist/images/social-media-icons.svg" alt=""
           /></a>
         </div>
         <section class="footer__list">
