--- a/src/index.hbs
+++ b/src/index.hbs
@@ -19,7 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/dist/styles.css" />
+     <link rel="stylesheet" href="/src/styles.css" />
   </head>
   <body>
     <!-- Hero -->
