testing fix for 404 error.

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -28,7 +28,7 @@
         <nav class="nav">
           <img
             class="easybank-icon"
-            src="/dist/images/logo.svg"
+            src="/src/images/logo.svg"
             alt="Easybank Logo"
           />
           <button id="openModalImage" class="btn btn__modal--open">
